Título 1 alterado por Marco

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <H1>Título feito por Marco</H1>
+    <H1>Título feito por Marco Altarado</H1>
     <h2>Título feito por João </h2>
     <h2>Título criado no GitHub (web) </h2>
 
