Alterado cor de fundo da página inicial.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <h2>Título feito por João </h2>
     <h2>Título criado no GitHub (web) </h2>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Aspernatur alias natus vitae similique repellendus? 
+        Sapiente facere aliquam, voluptatum illum delectus in 
+        commodi dolorem necessitatibus esse, voluptates magnam 
+        quibusdam vel amet.</p>
+
 </body>
 </html>
